# reproducer-cargodeb-cbindgen

./: Cargo.toml  build.rs
src/: lib.rs
